Manifests/Ingress/demo-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: flipkart-app
spec: # this spec define the behaviour of the replicaset 
  replicas: 3 
  selector: 
    matchLabels:
      app: fli
  template: # it defines the pod defination 
    metadata:
      labels: 
        app: fli
    spec: # This Spec is going define the behaviour of the Pod 
      containers: 
        - name: sample 
          image: muralisocial123/flipkart-clone-app:1.0
          ports: 
            - containerPort: 80
