Manifests/Ingress/flip-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: flipkart-app-rs 
  namespace: murali-ns 
spec: # this spec define the behaviour of the replicaset 
  replicas: 3 
  selector: 
    matchLabels:
      app: flip
  template: # it defines the pod defination 
    metadata:
      labels: 
        app: flip 
    spec: # This Spec is going define the behaviour of the Pod 
      containers: 
        - name: sample-cont 
          image: muralisocial123/flipkart-clone-app:1.0
          ports: 
            - containerPort: 80    
---
apiVersion: v1
kind: Service
metadata:
  name: flip-svc
  namespace: murali-ns
spec:
  selector:
    app: flip
  ports:
  - port: 81
    targetPort: 80
  type: ClusterIP
