Manifests/Ingress/flower-app.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: flower-app-deployment 
  namespace: murali-ns 
spec: # this spec define the behaviour of the replicaset 
  replicas: 2 
  selector: 
    matchLabels:
      app: web
  template: # it defines the pod defination 
    metadata:
      labels: 
        app: web 
    spec: # This Spec is going define the behaviour of the Pod 
      containers: 
        - name: flower-cont 
          image: muralisocial123/flower-app-cap:1.0
          resources:
            requests:
              cpu: 50m
              memory: 128Mi 
            limits:
              cpu: 100m
              memory: 256Mi     
          ports: 
            - containerPort: 3015    
---
apiVersion: v1
kind: Service
metadata:
  name: flower-svc
  namespace: murali-ns
spec:
  selector:
    app: web
  ports:
  - port: 3016
    targetPort: 3015
  type: ClusterIP
