Manifests/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target": /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /flip 
            pathType: Prefix 
            backend: 
              service:
                name: flip-svc
                port:
                  number: 81
          - path: /flower
            pathType: Prefix 
            backend: 
              service:
                name: flower-svc
                port:
                  number: 3016
          - path: /(.*)
            pathType: Prefix 
            backend: 
              service:
                name: flower-svc
                port:
                  number: 3016
